@@ -4,8 +4,8 @@
 	 name="searace"
 	 type="python:searace"
 	 section="/experience/."
-	 difficulty="0"
-	 icon="boardicons/watercycle.png"
+	 difficulty="6"
+	 icon="boardicons/searace.png"
 	 author="Bruno Coudoin (bruno.coudoin@free.fr)"
 	 boarddir="searace">
 	 <_title>A Sea race against Tux</_title>
@@ -13,6 +13,7 @@
 in a race against Tux.</_description>
 	<_prerequisite></_prerequisite>
 	<_goal></_goal>
-	<_manual></_manual>
+	<_manual>In the text entry, enter line by line commands to give direction to your boat.
+Commands supported are displayed between the two entry area.</_manual>
   </Board>
 </GCompris>
